# procedural-planets

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: build.yml  format.yml
data/bodies/: crystalline.json  earth.json  volcanic.json
data/palettes/: crystalline.json  earth.json  volcanic.json
libplanetgen/: CMakeLists.txt
libplanetgen/cmake/: EmbedShaders.cmake
libplanetgen/include/planetgen/: planetgen.h  planetgen.hpp
libplanetgen/src/api/: InternalTypes.h  planetgen_api.cpp
libplanetgen/src/backend/: IComputeBackend.h  ParamBlocks.h  ParamMappers.cpp  ParamMappers.h  ShaderRegistry.cpp  ShaderRegistry.h
libplanetgen/src/backend/opengl/: GlDevice.cpp  GlDevice.h  HeadlessGLBackend.cpp  HeadlessGLBackend.h  OpenGLBackend.cpp  OpenGLBackend.h  WindowedGLBackend.cpp  WindowedGLBackend.h
libplanetgen/src/mesh/: MeshGen.cpp  MeshGen.h
libplanetgen/src/model/: BodyConfig.cpp  BodyConfig.h  BodyConfigJson.cpp  BodyConfigJson.h  BodyConfigProjection.cpp  BodyConfigProjection.h  PaletteRegistry.cpp  PaletteRegistry.h
libplanetgen/src/strategy/: ContinentMaskPass.cpp  ContinentMaskPass.h  ErosionStrategy.cpp  ErosionStrategy.h  GenerationPipeline.cpp  GenerationPipeline.h  HeightStrategy.cpp  HeightStrategy.h  IGenerationStrategy.h  PaletteProvider.cpp  PaletteProvider.h  ShadingStrategy.cpp  ShadingStrategy.h  StrategyCommon.h
libplanetgen/tests/: test_body_model.cpp  test_determinism.cpp  test_headless.cpp  test_patch_generation.cpp  test_public_api.cpp  test_public_consumer.cpp  test_registry.cpp  test_strategies.cpp  test_strategy_extension.cpp
shaders/: atmosphere.frag  atmosphere.vert  basic.frag  basic.vert  ocean.frag  ocean.vert  passthrough.frag  passthrough.vert  planet.frag  planet.vert  space.frag  space.vert
shaders/compute/: continent_growth.comp  erosion_earth.comp  height_earth.comp  noise.glsl  shading_earth.comp  shading_generic.comp
shaders/earth/: planet_earth.frag  planet_earth.vert  planet_earth_pbr.frag
shaders/generic/: planet_generic.frag  planet_generic.vert
shaders/includes/: lighting.glsl  math.glsl  noise.glsl  pbr.glsl  triplanar.glsl
src/app/: Application.cpp  Application.h  CMakeLists.txt  CaptureRequest.cpp  CaptureRequest.h  Input.cpp  Input.h  Keybinds.h  Main.cpp
src/core/: CMakeLists.txt  Core.cpp  Core.h
src/core/generation/: NoiseLayer.cpp  NoiseLayer.h  Planet.cpp  Planet.h  TerrainGenerator.cpp  TerrainGenerator.h
src/core/math/: Camera.cpp  Camera.h  Constants.h
src/core/noise/: FractalNoise.cpp  FractalNoise.h  Noise.h  SimplexNoise.cpp  SimplexNoise.h
src/render/: BiomePalette.cpp  BiomePalette.h  BodyRuntime.cpp  BodyRuntime.h  CMakeLists.txt  CelestialBody.cpp  CelestialBody.h  ComputeShader.cpp  ComputeShader.h  ContinentMaskRenderer.cpp  ContinentMaskRenderer.h  Earth.cpp  Earth.h  Framebuffer.cpp  Framebuffer.h  GenerationScheduler.cpp  GenerationScheduler.h  GenericBody.cpp  GenericBody.h  GlFence.cpp  GlFence.h  GpuBuffer.h  GpuConstants.h  Gui.cpp  Gui.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  ParameterRandomizer.h  PostProcessor.cpp  PostProcessor.h  Render.cpp  Render.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TerrainGenerator.cpp  TerrainGenerator.h  (+2 more)
src/render/cinematic/: CaptureManager.cpp  CaptureManager.h  CinematicController.cpp  CinematicController.h
src/render/effects/: AtmosphereRenderer.cpp  AtmosphereRenderer.h  OceanRenderer.cpp  OceanRenderer.h
src/render/gui/: AtmospherePanel.cpp  AtmospherePanel.h  CinematicPanel.cpp  CinematicPanel.h  DebugPanel.cpp  DebugPanel.h  GuiManager.cpp  GuiManager.h  ScenePanel.cpp  ScenePanel.h  SurfacePanel.cpp  SurfacePanel.h  TerrainPanel.cpp  TerrainPanel.h
src/render/lod/: PatchLodSystem.cpp  PatchLodSystem.h  PatchPool.cpp  PatchPool.h  PlanetQuadTree.cpp  PlanetQuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h  SpherePatch.cpp  SpherePatch.h
src/render/settings/: AtmosphereSettings.h  CinematicSettings.h  OceanSettings.h  SceneSettings.h  SurfaceSettings.h  TerrainSettings.h
